--- a/index.html
+++ b/index.html
@@ -3,97 +3,140 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Gerador de Nota de Pedido</title>
+<title>Sistema Profissional de Pedidos</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
+
 body{
-    background:#f5f5f5;
+    background: linear-gradient(135deg,#1f2937,#111827);
 }
+
+.card-custom{
+    border:none;
+    border-radius:15px;
+    box-shadow:0 10px 30px rgba(0,0,0,0.3);
+}
+
 .nota{
     background:white;
-    padding:20px;
-    border-radius:10px;
-    box-shadow:0 0 10px rgba(0,0,0,0.1);
+    padding:25px;
+    border-radius:15px;
+    min-height:500px;
+    white-space:pre-line;
 }
-.logo{
-    max-width:150px;
-    display:block;
-    margin:auto;
-}
-@media print{
+
+/* IMPRESSÃO PROFISSIONAL */
+@media print {
+
+    body{
+        background:white !important;
+    }
+
     body *{
         visibility:hidden;
     }
-    .nota, .nota *{
+
+    #nota, #nota *{
         visibility:visible;
     }
-    .nota{
+
+    #nota{
         position:absolute;
         left:0;
         top:0;
         width:100%;
+        box-shadow:none;
+        border-radius:0;
     }
 }
+
 </style>
 </head>
 <body>
 
-<div class="container mt-5">
-<div class="row">
+<div class="container py-5">
+<div class="row g-4">
 
 <!-- FORMULÁRIO -->
-<div class="col-md-6">
-<h3>Cadastro do Pedido</h3>
+<div class="col-lg-6">
+<div class="card card-custom p-4 bg-white">
 
-<input type="text" id="cliente" class="form-control mb-2" placeholder="Cliente">
-<input type="text" id="contato" class="form-control mb-2" placeholder="Contato">
+<h4 class="mb-3">Novo Pedido</h4>
+
+<div class="alert alert-secondary">
+Pedido Nº: <strong id="numeroPedido"></strong>
+</div>
+
+<input type="text" id="cliente" class="form-control mb-2" placeholder="Nome do Cliente">
+<input type="text" id="contato" class="form-control mb-3" placeholder="Telefone">
+
+<select id="tipoEntrega" class="form-select mb-2" onchange="verificarEntrega()">
+<option value="">Tipo de Atendimento</option>
+<option value="retirada">Retirada no Local</option>
+<option value="entrega">Entrega</option>
+</select>
+
+<select id="lojas" class="form-select mb-2 d-none">
+<option>Loja 01</option>
+<option>Loja 02</option>
+<option>Loja 03</option>
+<option>Loja 04</option>
+</select>
+
+<div id="enderecoEntrega" class="d-none">
+<input type="text" id="rua" class="form-control mb-2" placeholder="Rua">
+<input type="text" id="numero" class="form-control mb-2" placeholder="Número">
+<input type="text" id="bairro" class="form-control mb-2" placeholder="Bairro">
+<input type="text" id="cidade" class="form-control mb-3" placeholder="Cidade">
+</div>
 
 <hr>
 
-<h5>Adicionar Item</h5>
-<input type="text" id="produto" class="form-control mb-2" placeholder="Produto">
+<h6>Adicionar Item</h6>
 
-<div class="row">
-<div class="col">
-<input type="number" id="quantidade" class="form-control mb-2" placeholder="Qtd">
+<div class="row g-2">
+<div class="col-5">
+<input type="text" id="produto" class="form-control" placeholder="Produto">
 </div>
-<div class="col">
-<input type="number" id="valor" class="form-control mb-2" placeholder="Valor Unitário">
+<div class="col-3">
+<input type="number" id="quantidade" class="form-control" placeholder="Qtd">
+</div>
+<div class="col-4">
+<input type="number" id="valor" class="form-control" placeholder="Valor">
 </div>
 </div>
 
-<button class="btn btn-primary w-100 mb-3" onclick="adicionarItem()">Adicionar Item</button>
+<button class="btn btn-primary w-100 mt-2" onclick="adicionarItem()">Adicionar</button>
 
-<ul class="list-group mb-3" id="listaItens"></ul>
+<ul class="list-group mt-3 mb-3" id="listaItens"></ul>
 
-<input type="number" id="taxa" class="form-control mb-2" placeholder="Taxa de Entrega" value="0">
+<input type="number" id="taxa" class="form-control mb-2" placeholder="Taxa Entrega" value="0">
 
-<select id="pagamento" class="form-control mb-2" onchange="verificarPagamento()">
+<select id="pagamento" class="form-select mb-2" onchange="verificarPagamento()">
 <option>PIX</option>
 <option>Cartão</option>
 <option>Dinheiro</option>
 </select>
 
-<input type="number" id="trocoPara" class="form-control mb-3" placeholder="Troco para" style="display:none;">
+<input type="number" id="trocoPara" class="form-control mb-3 d-none" placeholder="Troco para">
 
-<button class="btn btn-success w-100 mb-2" onclick="gerarNota()">Gerar Nota</button>
-<button class="btn btn-secondary w-100 mb-2" onclick="imprimirNota()">Imprimir</button>
-<button class="btn btn-danger w-100" onclick="gerarPDF()">Gerar PDF</button>
+<div class="d-grid gap-2">
+<button class="btn btn-success" onclick="gerarNota()">Gerar Nota</button>
+<button class="btn btn-warning" onclick="enviarParaEntregador()">Enviar para Entregador</button>
+<button class="btn btn-secondary" onclick="imprimirNota()">Imprimir</button>
+<button class="btn btn-danger" onclick="gerarPDF()">Gerar PDF</button>
+</div>
 
+</div>
 </div>
 
 <!-- NOTA -->
-<div class="col-md-6">
-<h3>Nota Gerada</h3>
+<div class="col-lg-6">
 <div class="nota" id="nota">
-
-<img src="logo.png" class="logo mb-3">
-
 <pre id="resultado"></pre>
-
 </div>
 </div>
 
@@ -104,52 +147,71 @@ body{
 
 let itens = [];
 
+/* CONTADOR AUTOMÁTICO */
+let contadorPedido = localStorage.getItem("contadorPedido")
+    ? parseInt(localStorage.getItem("contadorPedido"))
+    : 1;
+
+document.getElementById("numeroPedido").innerText = contadorPedido;
+
+/* ENTREGADOR */
+const entregador = {
+    nome: "Fabricio",
+    telefone: "557197270344"
+};
+
+function verificarEntrega(){
+    let tipo = document.getElementById("tipoEntrega").value;
+    document.getElementById("lojas").classList.toggle("d-none", tipo !== "retirada");
+    document.getElementById("enderecoEntrega").classList.toggle("d-none", tipo !== "entrega");
+}
+
+function verificarPagamento(){
+    document.getElementById("trocoPara").classList.toggle("d-none",
+        document.getElementById("pagamento").value !== "Dinheiro");
+}
+
 function adicionarItem(){
+
     let produto = document.getElementById("produto").value;
     let quantidade = parseFloat(document.getElementById("quantidade").value);
     let valor = parseFloat(document.getElementById("valor").value);
 
-    if(produto && quantidade && valor){
-        itens.push({produto, quantidade, valor});
-        atualizarLista();
-        limparCampos();
-    }else{
-        alert("Preencha todos os campos!");
+    if(!produto || !quantidade || !valor){
+        alert("Preencha todos os campos do item!");
+        return;
     }
-}
 
-function removerItem(index){
-    itens.splice(index,1);
+    itens.push({produto, quantidade, valor});
     atualizarLista();
-}
 
-function atualizarLista(){
-    let lista = document.getElementById("listaItens");
-    lista.innerHTML = "";
-
-    itens.forEach((item,index)=>{
-        let totalItem = item.quantidade * item.valor;
-
-        lista.innerHTML += `
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-            ${item.quantidade}x ${item.produto} - R$ ${totalItem.toFixed(2)}
-            <button class="btn btn-sm btn-danger" onclick="removerItem(${index})">❌</button>
-        </li>
-        `;
-    });
-
-    gerarNota();
-}
-
-function limparCampos(){
     document.getElementById("produto").value="";
     document.getElementById("quantidade").value="";
     document.getElementById("valor").value="";
 }
 
-function verificarPagamento(){
-    document.getElementById("trocoPara").style.display =
-        document.getElementById("pagamento").value === "Dinheiro" ? "block" : "none";
+function atualizarLista(){
+
+    let lista = document.getElementById("listaItens");
+    lista.innerHTML="";
+
+    itens.forEach((item,index)=>{
+        let total = item.quantidade * item.valor;
+
+        lista.innerHTML += `
+        <li class="list-group-item d-flex justify-content-between">
+            ${item.quantidade}x ${item.produto}
+            <span>
+                R$ ${total.toFixed(2)}
+                <button class="btn btn-sm btn-danger ms-2" onclick="removerItem(${index})">X</button>
+            </span>
+        </li>`;
+    });
+}
+
+function removerItem(index){
+    itens.splice(index,1);
+    atualizarLista();
 }
 
 function gerarNota(){
@@ -160,64 +222,89 @@ function gerarNota(){
     let pagamento = document.getElementById("pagamento").value;
     let trocoPara = parseFloat(document.getElementById("trocoPara").value) || 0;
 
-    // DATA AUTOMÁTICA
-    let agora = new Date();
-    let dataFormatada = agora.toLocaleString("pt-BR");
-
-    let subtotal = 0;
-    let listaItensTexto = "";
+    let subtotal=0;
+    let listaTexto="";
 
     itens.forEach(item=>{
-        let totalItem = item.quantidade * item.valor;
-        subtotal += totalItem;
-        listaItensTexto += `• ${item.quantidade}x ${item.produto} - R$ ${totalItem.toFixed(2)}\n`;
+        let total = item.quantidade * item.valor;
+        subtotal+=total;
+        listaTexto += `${item.quantidade}x ${item.produto} - R$ ${total.toFixed(2)}\n`;
     });
 
-    let total = subtotal + taxa;
-    let troco = pagamento === "Dinheiro" ? trocoPara - total : 0;
+    let totalFinal = subtotal + taxa;
+    let troco = pagamento==="Dinheiro" ? trocoPara-totalFinal : 0;
 
-    let nota = `
-🧾 NOTA DE PEDIDO
-📅 Data: ${dataFormatada}
+    let enderecoTexto="";
+    let mapaLink="";
 
-Cliente: ${cliente}
-📞 Contato: ${contato}
+    if(document.getElementById("tipoEntrega").value==="retirada"){
+        enderecoTexto="Retirada em: "+document.getElementById("lojas").value;
+    } else {
+        let rua=document.getElementById("rua").value;
+        let numero=document.getElementById("numero").value;
+        let bairro=document.getElementById("bairro").value;
+        let cidade=document.getElementById("cidade").value;
 
-Itens:
-${listaItensTexto}
-
-💰 Subtotal: R$ ${subtotal.toFixed(2)}
-🚚 Taxa de entrega: R$ ${taxa.toFixed(2)}
-
-💵 TOTAL: R$ ${total.toFixed(2)}
-💵 Forma de Pagamento: ${pagamento}
-`;
-
-    if(pagamento === "Dinheiro"){
-        nota += `💰 Troco para: R$ ${trocoPara.toFixed(2)}\n`;
-        nota += `💵 Troco: R$ ${troco.toFixed(2)}\n`;
+        enderecoTexto=`Entrega: ${rua}, ${numero} - ${bairro} - ${cidade}`;
+        mapaLink=`https://www.google.com/maps/search/?api=1&query=${encodeURIComponent(rua+" "+numero+" "+bairro+" "+cidade)}`;
     }
 
-    document.getElementById("resultado").textContent = nota;
+    let nota = `
+PEDIDO Nº ${contadorPedido}
+
+Cliente: ${cliente}
+Contato: ${contato}
+${enderecoTexto}
+
+ITENS:
+${listaTexto}
+
+Subtotal: R$ ${subtotal.toFixed(2)}
+Taxa: R$ ${taxa.toFixed(2)}
+TOTAL: R$ ${totalFinal.toFixed(2)}
+Pagamento: ${pagamento}
+`;
+
+    if(pagamento==="Dinheiro"){
+        nota+=`Troco: R$ ${troco.toFixed(2)}\n`;
+    }
+
+    if(mapaLink){
+        nota+=`\nMapa: ${mapaLink}`;
+    }
+
+    document.getElementById("resultado").textContent=nota;
+
+    return nota;
 }
 
+/* WHATSAPP */
+function enviarParaEntregador(){
+    let nota = gerarNota();
+    let url = `https://wa.me/${entregador.telefone}?text=${encodeURIComponent(nota)}`;
+    window.open(url,"_blank");
+}
+
+/* IMPRESSÃO CORRETA */
 function imprimirNota(){
-    window.print();
+    gerarNota();
+    setTimeout(()=>{
+        window.print();
+    },300);
 }
 
+/* PDF */
 async function gerarPDF(){
     const { jsPDF } = window.jspdf;
     let doc = new jsPDF();
-
-    let img = new Image();
-    img.src = "logo.png";
-
-    img.onload = function(){
-        doc.addImage(img, "PNG", 75, 10, 60, 30);
-        doc.text(document.getElementById("resultado").textContent, 10, 50);
-        doc.save("nota_pedido.pdf");
-    }
+    doc.text(document.getElementById("resultado").textContent,10,10);
+    doc.save("pedido_"+contadorPedido+".pdf");
 }
+
+/* AUMENTA O NÚMERO APÓS GERAR */
+document.querySelector(".btn-success").addEventListener("click",()=>{
+    localStorage.setItem("contadorPedido", contadorPedido + 1);
+});
 
 </script>
 
