--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cupom Fiscal</title>
+<title>MIX22 - Cupom Fiscal 80mm</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-
 body{
     background:#f0f0f0;
 }
@@ -20,17 +19,28 @@ body{
 }
 
 .cupom{
-    width:300px;
+    width:480px; /* 80mm */
     background:white;
     padding:15px;
     margin:auto;
     font-family:"Courier New", monospace;
     font-size:13px;
     color:#000;
+    text-align:left;
+}
+
+.cupom pre{
+    margin:0;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    line-height:1.2;
 }
 
 @media print {
-
+    body {
+        margin:0;
+        padding:0;
+    }
     body *{
         visibility:hidden;
     }
@@ -43,11 +53,11 @@ body{
         position:absolute;
         left:0;
         top:0;
-        width:58mm;
+        width:80mm;
+        text-align:left;
+        height:auto;
     }
-
 }
-
 </style>
 </head>
 <body>
@@ -59,7 +69,7 @@ body{
 <div class="col-md-6">
 <div class="card card-custom p-4 bg-white">
 
-<h5>Novo Pedido</h5>
+<h5>Novo Pedido - MIX22</h5>
 
 <div class="alert alert-secondary">
 Pedido Nº: <strong id="numeroPedido"></strong>
@@ -74,13 +84,9 @@ Pedido Nº: <strong id="numeroPedido"></strong>
 </select>
 
 <div id="areaEndereco">
-
 <input type="text" id="endereco" class="form-control mb-2" placeholder="Rua e Número">
-
-<input type="text" id="complemento" class="form-control mb-2" placeholder="Complemento (Apto, Bloco, Casa...)">
-
+<input type="text" id="complemento" class="form-control mb-2" placeholder="Complemento">
 <input type="text" id="referencia" class="form-control mb-2" placeholder="Ponto de Referência">
-
 </div>
 
 <hr>
@@ -110,6 +116,7 @@ Pedido Nº: <strong id="numeroPedido"></strong>
 </select>
 
 <button class="btn btn-success w-100 mb-2" onclick="gerarCupom()">Gerar Cupom</button>
+<button class="btn btn-warning w-100 mb-2" onclick="enviarParaEntregador()">Enviar para Entregador</button>
 <button class="btn btn-secondary w-100" onclick="imprimir()">Imprimir</button>
 
 </div>
@@ -135,12 +142,17 @@ let contadorPedido = localStorage.getItem("contadorPedido")
 
 document.getElementById("numeroPedido").innerText = contadorPedido;
 
+/* ENTREGADOR */
+const entregador = {
+    nome: "Fabricio",
+    telefone: "557197270344"
+};
+
 function toggleEndereco(){
     let tipo = document.getElementById("tipoEntrega").value;
     document.getElementById("areaEndereco").style.display =
         tipo === "entrega" ? "block" : "none";
 }
-
 toggleEndereco();
 
 function adicionarItem(){
@@ -196,32 +208,42 @@ function gerarCupom(){
         let total=item.quantidade*item.valor;
         subtotal+=total;
 
-        itensTexto+=`
-${item.quantidade}x ${item.produto}
-   R$ ${total.toFixed(2)}
-`;
+        // garante alinhamento para ~48 chars
+        let nomeProd = item.produto.length>30 ? item.produto.slice(0,30) : item.produto;
+        itensTexto+=`${item.quantidade}x ${nomeProd.padEnd(30,' ')}R$ ${total.toFixed(2)}\n`;
     });
 
     let totalFinal=subtotal+taxa;
     let agora = new Date().toLocaleString("pt-BR");
 
-    let enderecoTexto = "";
+    let enderecoTexto="";
+    let mapaLink="";
 
     if(tipo==="entrega"){
-        enderecoTexto = `
-Entrega:
+        enderecoTexto = `Entrega:
 ${endereco}
 ${complemento ? "Comp: "+complemento : ""}
 ${referencia ? "Ref: "+referencia : ""}
 `;
+
+        mapaLink = "https://www.google.com/maps/search/?api=1&query=" +
+            encodeURIComponent(endereco + " " + complemento + " " + referencia);
+
     } else {
-        enderecoTexto = "Retirada no Local\n";
+        enderecoTexto="Retirada no Local\n";
     }
 
+    // ASCII Logo centralizado (~48 caracteres por linha)
+    let logoAscii = `
+************************************************
+*                                              *
+*                    MIX22                     *
+*                                              *
+************************************************
+`;
+
     let cupom = `
-        MINHA EMPRESA LTDA
-        CNPJ: 00.000.000/0001-00
---------------------------------
+${logoAscii}
 PEDIDO Nº ${contadorPedido}
 ${agora}
 --------------------------------
@@ -238,17 +260,34 @@ Taxa:     R$ ${taxa.toFixed(2)}
 TOTAL:    R$ ${totalFinal.toFixed(2)}
 Pagamento: ${pagamento}
 --------------------------------
-     OBRIGADO PELA PREFERÊNCIA!
+OBRIGADO PELA PREFERÊNCIA!
 `;
 
     document.getElementById("resultado").textContent=cupom;
 
     localStorage.setItem("contadorPedido", contadorPedido+1);
+
+    return {cupom, mapaLink};
+}
+
+function enviarParaEntregador(){
+
+    let dados = gerarCupom();
+
+    let mensagem = document.getElementById("resultado").textContent;
+
+    if(dados.mapaLink){
+        mensagem += "\nMapa: " + dados.mapaLink;
+    }
+
+    let url = "https://wa.me/" + entregador.telefone + "?text=" + encodeURIComponent(mensagem);
+
+    window.open(url, "_blank");
 }
 
 function imprimir(){
     gerarCupom();
-    setTimeout(()=>{ window.print(); },300);
+    setTimeout(()=>{ window.print(); },500); // espera o DOM atualizar
 }
 
 </script>
