--- a/index.html
+++ b/index.html
@@ -8,56 +8,34 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <style>
-body{
-    background:#f0f0f0;
-}
-
+body{ background:#f0f0f0; }
 .card-custom{
     border:none;
     border-radius:10px;
     box-shadow:0 5px 15px rgba(0,0,0,0.2);
 }
-
 .cupom{
-    width:100%; /* largura dinâmica */
-    max-width:600px; /* opcional: limita o tamanho para tela grande */
+    width:100%;
+    max-width:600px;
     background:white;
     padding:15px;
     margin:auto;
     font-family:"Courier New", monospace;
-    font-size:15px; /* fonte maior para leitura */
-    color:#000;
-    text-align:left;
+    font-size:15px;
 }
-
 .cupom pre{
     margin:0;
-    white-space: pre-wrap; /* quebra de linha automática */
-    word-wrap: break-word;
+    white-space: pre-wrap;
     line-height:1.3;
 }
-
 @media print {
-    body {
-        margin:0;
-        padding:0;
-    }
-    body *{
-        visibility:hidden;
-    }
-
-    #cupom, #cupom *{
-        visibility:visible;
-    }
-
+    body *{ visibility:hidden; }
+    #cupom, #cupom *{ visibility:visible; }
     #cupom{
         position:absolute;
         left:0;
         top:0;
-        width:100%; /* ocupa toda a largura do papel */
-        max-width:none;
-        text-align:left;
-        height:auto; /* altura automática */
+        width:100%;
     }
 }
 </style>
@@ -67,7 +45,6 @@ body{
 <div class="container py-4">
 <div class="row g-4">
 
-<!-- FORM -->
 <div class="col-md-6">
 <div class="card card-custom p-4 bg-white">
 
@@ -78,21 +55,19 @@ Pedido Nº: <strong id="numeroPedido"></strong>
 </div>
 
 <input type="text" id="cliente" class="form-control mb-2" placeholder="Cliente">
-<input type="text" id="contato" class="form-control mb-2" placeholder="Telefone">
+<input type="text" id="contato" class="form-control mb-2" placeholder="Telefone do Cliente">
 
 <select id="tipoEntrega" class="form-select mb-2" onchange="toggleEndereco()">
 <option value="retirada">Retirada</option>
 <option value="entrega">Entrega</option>
 </select>
 
-<!-- Área de Endereço -->
 <div id="areaEndereco">
 <input type="text" id="endereco" class="form-control mb-2" placeholder="Rua e Número">
 <input type="text" id="complemento" class="form-control mb-2" placeholder="Complemento">
 <input type="text" id="referencia" class="form-control mb-2" placeholder="Ponto de Referência">
 </div>
 
-<!-- Área de Retirada -->
 <div id="areaRetirada" style="display:none;">
 <select id="lojaRetirada" class="form-select mb-2">
 <option value="Lauro 01">Lauro 01</option>
@@ -129,14 +104,19 @@ Pedido Nº: <strong id="numeroPedido"></strong>
 <option>Dinheiro</option>
 </select>
 
-<button class="btn btn-success w-100 mb-2" onclick="gerarCupom()">Gerar Cupom</button>
-<button class="btn btn-warning w-100 mb-2" onclick="enviarParaEntregador()">Enviar para Entregador</button>
+<button class="btn btn-success w-100 mb-2" onclick="finalizarPedido()">
+Finalizar Pedido (Enviar Cliente)
+</button>
+
+<button class="btn btn-warning w-100 mb-2" onclick="enviarParaEntregador()">
+Enviar para Entregador
+</button>
+
 <button class="btn btn-secondary w-100" onclick="imprimir()">Imprimir</button>
 
 </div>
 </div>
 
-<!-- CUPOM -->
 <div class="col-md-6">
 <div class="cupom" id="cupom">
 <pre id="resultado"></pre>
@@ -151,20 +131,15 @@ let itens = [];
 let contadorPedido = localStorage.getItem("contadorPedido")
     ? parseInt(localStorage.getItem("contadorPedido"))
     : 1;
+
 document.getElementById("numeroPedido").innerText = contadorPedido;
 
-/* ENTREGADOR */
 const entregador = { nome: "Fabricio", telefone: "557197270344" };
 
 function toggleEndereco(){
     let tipo = document.getElementById("tipoEntrega").value;
-    if(tipo==="entrega"){
-        document.getElementById("areaEndereco").style.display="block";
-        document.getElementById("areaRetirada").style.display="none";
-    } else {
-        document.getElementById("areaEndereco").style.display="none";
-        document.getElementById("areaRetirada").style.display="block";
-    }
+    document.getElementById("areaEndereco").style.display = tipo==="entrega" ? "block":"none";
+    document.getElementById("areaRetirada").style.display = tipo==="retirada" ? "block":"none";
 }
 toggleEndereco();
 
@@ -172,9 +147,15 @@ function adicionarItem(){
     let produto = document.getElementById("produto").value;
     let quantidade = parseFloat(document.getElementById("quantidade").value);
     let valor = parseFloat(document.getElementById("valor").value);
-    if(!produto || !quantidade || !valor){ alert("Preencha todos os campos!"); return; }
+
+    if(!produto || quantidade<=0 || valor<=0){
+        alert("Preencha corretamente os campos!");
+        return;
+    }
+
     itens.push({produto, quantidade, valor});
     atualizarLista();
+
     document.getElementById("produto").value="";
     document.getElementById("quantidade").value="";
     document.getElementById("valor").value="";
@@ -185,7 +166,11 @@ function atualizarLista(){
     listaItens.innerHTML="";
     itens.forEach(item=>{
         let total=item.quantidade*item.valor;
-        listaItens.innerHTML+=`<li class="list-group-item d-flex justify-content-between">${item.quantidade}x ${item.produto}<span>R$ ${total.toFixed(2)}</span></li>`;
+        listaItens.innerHTML+=
+        `<li class="list-group-item d-flex justify-content-between">
+        ${item.quantidade}x ${item.produto}
+        <span>${total.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}</span>
+        </li>`;
     });
 }
 
@@ -200,8 +185,7 @@ function gerarCupom(){
     itens.forEach(item=>{
         let total=item.quantidade*item.valor;
         subtotal+=total;
-        let nomeProd = item.produto.length>40 ? item.produto.slice(0,40) : item.produto;
-        itensTexto+=`${item.quantidade}x ${nomeProd.padEnd(35,' ')}R$ ${total.toFixed(2)}\n`;
+        itensTexto+=`${item.quantidade}x ${item.produto} - ${total.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}\n`;
     });
 
     let totalFinal=subtotal+taxa;
@@ -211,24 +195,19 @@ function gerarCupom(){
     if(tipo==="entrega"){
         let endereco = document.getElementById("endereco").value;
         let complemento = document.getElementById("complemento").value;
-        let referencia = document.getElementById("referencia").value;
-        enderecoTexto = `Entrega:\n${endereco}\n${complemento ? "Comp: "+complemento : ""}\n${referencia ? "Ref: "+referencia : ""}\n`;
-        mapaLink = "https://www.google.com/maps/search/?api=1&query=" + encodeURIComponent(endereco + " " + complemento + " " + referencia);
+
+        enderecoTexto = `Entrega:\n${endereco}\n${complemento}\n`;
+
+        // 🔥 AGORA USA APENAS ENDEREÇO + COMPLEMENTO
+        mapaLink = "https://www.google.com/maps/search/?api=1&query=" +
+        encodeURIComponent(endereco + " " + complemento);
     } else {
         let loja = document.getElementById("lojaRetirada").value;
         enderecoTexto=`Retirada na loja: ${loja}\n`;
     }
 
-    let logoAscii = `
-************************************************
-*                                              *
-*                    MIX22                     *
-*                                              *
-************************************************
-`;
-
     let cupom = `
-${logoAscii}
+*************** MIX22 ***************
 PEDIDO Nº ${contadorPedido}
 ${agora}
 --------------------------------
@@ -240,25 +219,58 @@ ${enderecoTexto}
 ITENS:
 ${itensTexto}
 --------------------------------
-Subtotal: R$ ${subtotal.toFixed(2)}
-Taxa:     R$ ${taxa.toFixed(2)}
-TOTAL:    R$ ${totalFinal.toFixed(2)}
+Subtotal: ${subtotal.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}
+Taxa: ${taxa.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}
+TOTAL: ${totalFinal.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}
 Pagamento: ${pagamento}
 --------------------------------
 OBRIGADO PELA PREFERÊNCIA!
 `;
 
     document.getElementById("resultado").textContent=cupom;
-    localStorage.setItem("contadorPedido", contadorPedido+1);
-    return {cupom, mapaLink};
+
+    return {cupom, mapaLink, tipo};
+}
+
+function enviarWhatsApp(numero, mensagem){
+    numero = numero.replace(/\D/g,'');
+    if(!numero.startsWith("55")) numero="55"+numero;
+    window.open("https://wa.me/"+numero+"?text="+encodeURIComponent(mensagem),"_blank");
+}
+
+function finalizarPedido(){
+    let dados = gerarCupom();
+    let mensagem = document.getElementById("resultado").textContent;
+
+    if(dados.tipo==="entrega"){
+        mensagem += "\n\n📍 LOCALIZAÇÃO:\n"+dados.mapaLink;
+    }
+
+    let telefoneCliente = document.getElementById("contato").value;
+    if(telefoneCliente) enviarWhatsApp(telefoneCliente, mensagem);
+
+    contadorPedido++;
+    localStorage.setItem("contadorPedido", contadorPedido);
+    document.getElementById("numeroPedido").innerText = contadorPedido;
+
+    itens=[];
+    atualizarLista();
 }
 
 function enviarParaEntregador(){
     let dados = gerarCupom();
     let mensagem = document.getElementById("resultado").textContent;
-    if(dados.mapaLink) mensagem += "\nMapa: " + dados.mapaLink;
-    let url = "https://wa.me/" + entregador.telefone + "?text=" + encodeURIComponent(mensagem);
-    window.open(url, "_blank");
+
+    if(dados.tipo==="entrega"){
+        let endereco = document.getElementById("endereco").value;
+        if(!endereco){
+            alert("Digite o endereço antes de enviar!");
+            return;
+        }
+        mensagem += "\n\n📍 LOCALIZAÇÃO NO MAPA:\n"+dados.mapaLink;
+    }
+
+    enviarWhatsApp(entregador.telefone, mensagem);
 }
 
 function imprimir(){
