--- a/index.html
+++ b/index.html
@@ -3,281 +3,139 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>MIX22 - Cupom Fiscal Dinâmico</title>
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<title>Finalizar Entrega</title>
 
 <style>
-body{ background:#f0f0f0; }
-.card-custom{
-    border:none;
-    border-radius:10px;
-    box-shadow:0 5px 15px rgba(0,0,0,0.2);
+body {
+    font-family: Arial, sans-serif;
+    background: #f2f2f2;
+    display: flex;
+    justify-content: center;
+    padding: 40px;
 }
-.cupom{
-    width:100%;
-    max-width:600px;
-    background:white;
-    padding:15px;
-    margin:auto;
-    font-family:"Courier New", monospace;
-    font-size:15px;
+
+.container {
+    background: #ffffff;
+    padding: 25px;
+    width: 400px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
-.cupom pre{
-    margin:0;
-    white-space: pre-wrap;
-    line-height:1.3;
+
+h2 {
+    text-align: center;
+    margin-bottom: 20px;
 }
-@media print {
-    body *{ visibility:hidden; }
-    #cupom, #cupom *{ visibility:visible; }
-    #cupom{
-        position:absolute;
-        left:0;
-        top:0;
-        width:100%;
-    }
+
+label {
+    font-weight: bold;
+    margin-top: 10px;
+    display: block;
+}
+
+input, textarea, button {
+    width: 100%;
+    margin-top: 5px;
+    padding: 10px;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+}
+
+textarea {
+    resize: none;
+    height: 80px;
+}
+
+button {
+    background: #28a745;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-weight: bold;
+    margin-top: 15px;
+}
+
+button:hover {
+    background: #218838;
+}
+
+.resultado {
+    margin-top: 20px;
+    padding: 15px;
+    background: #eef4ff;
+    border-radius: 6px;
+    font-size: 14px;
+}
+
+a {
+    color: blue;
+    word-break: break-all;
 }
 </style>
 </head>
 <body>
 
-<div class="container py-4">
-<div class="row g-4">
+<div class="container">
+    <h2>Finalizar Entrega</h2>
 
-<div class="col-md-6">
-<div class="card card-custom p-4 bg-white">
+    <label>Endereço</label>
+    <input type="text" id="endereco" placeholder="Rua, número, bairro, cidade">
 
-<h5>Novo Pedido - MIX22</h5>
+    <label>Nota do Entregador (0 a 5)</label>
+    <input type="number" id="nota" min="0" max="5" step="0.5" placeholder="Ex: 4.5">
 
-<div class="alert alert-secondary">
-Pedido Nº: <strong id="numeroPedido"></strong>
-</div>
+    <label>Observação</label>
+    <textarea id="observacao" placeholder="Digite uma observação (opcional)"></textarea>
 
-<input type="text" id="cliente" class="form-control mb-2" placeholder="Cliente">
-<input type="text" id="contato" class="form-control mb-2" placeholder="Telefone do Cliente">
+    <button onclick="enviarEntrega()">Enviar Entrega</button>
 
-<select id="tipoEntrega" class="form-select mb-2" onchange="toggleEndereco()">
-<option value="retirada">Retirada</option>
-<option value="entrega">Entrega</option>
-</select>
-
-<div id="areaEndereco">
-<input type="text" id="endereco" class="form-control mb-2" placeholder="Rua e Número">
-<input type="text" id="complemento" class="form-control mb-2" placeholder="Complemento">
-<input type="text" id="referencia" class="form-control mb-2" placeholder="Ponto de Referência">
-</div>
-
-<div id="areaRetirada" style="display:none;">
-<select id="lojaRetirada" class="form-select mb-2">
-<option value="Lauro 01">Lauro 01</option>
-<option value="Lauro02">Lauro02</option>
-<option value="Itinga">Itinga</option>
-<option value="Vida Nova Infantil">Vida Nova Infantil</option>
-<option value="Vida Nova Adulto">Vida Nova Adulto</option>
-</select>
-</div>
-
-<hr>
-
-<div class="row g-2">
-<div class="col-5">
-<input type="text" id="produto" class="form-control" placeholder="Produto">
-</div>
-<div class="col-3">
-<input type="number" id="quantidade" class="form-control" placeholder="Qtd">
-</div>
-<div class="col-4">
-<input type="number" id="valor" class="form-control" placeholder="Valor">
-</div>
-</div>
-
-<button class="btn btn-primary w-100 mt-2" onclick="adicionarItem()">Adicionar</button>
-
-<ul class="list-group mt-3 mb-3" id="listaItens"></ul>
-
-<input type="number" id="taxa" class="form-control mb-2" placeholder="Taxa" value="0">
-
-<select id="pagamento" class="form-select mb-2">
-<option>PIX</option>
-<option>Cartão</option>
-<option>Dinheiro</option>
-</select>
-
-<button class="btn btn-success w-100 mb-2" onclick="finalizarPedido()">
-Finalizar Pedido (Enviar Cliente)
-</button>
-
-<button class="btn btn-warning w-100 mb-2" onclick="enviarParaEntregador()">
-Enviar para Entregador
-</button>
-
-<button class="btn btn-secondary w-100" onclick="imprimir()">Imprimir</button>
-
-</div>
-</div>
-
-<div class="col-md-6">
-<div class="cupom" id="cupom">
-<pre id="resultado"></pre>
-</div>
-</div>
-
-</div>
+    <div class="resultado" id="resultado" style="display:none;"></div>
 </div>
 
 <script>
-let itens = [];
-let contadorPedido = localStorage.getItem("contadorPedido")
-    ? parseInt(localStorage.getItem("contadorPedido"))
-    : 1;
-
-document.getElementById("numeroPedido").innerText = contadorPedido;
-
-const entregador = { nome: "Fabricio", telefone: "557197270344" };
-
-function toggleEndereco(){
-    let tipo = document.getElementById("tipoEntrega").value;
-    document.getElementById("areaEndereco").style.display = tipo==="entrega" ? "block":"none";
-    document.getElementById("areaRetirada").style.display = tipo==="retirada" ? "block":"none";
+function gerarLinkMaps(endereco) {
+    return "https://www.google.com/maps/search/?api=1&query=" + encodeURIComponent(endereco);
 }
-toggleEndereco();
 
-function adicionarItem(){
-    let produto = document.getElementById("produto").value;
-    let quantidade = parseFloat(document.getElementById("quantidade").value);
-    let valor = parseFloat(document.getElementById("valor").value);
+function enviarEntrega() {
+    const endereco = document.getElementById("endereco").value.trim();
+    const nota = document.getElementById("nota").value;
+    const observacao = document.getElementById("observacao").value.trim();
 
-    if(!produto || quantidade<=0 || valor<=0){
-        alert("Preencha corretamente os campos!");
+    if (endereco === "" || nota === "") {
+        alert("Preencha o endereço e a nota do entregador.");
         return;
     }
 
-    itens.push({produto, quantidade, valor});
-    atualizarLista();
+    const linkMaps = gerarLinkMaps(endereco);
 
-    document.getElementById("produto").value="";
-    document.getElementById("quantidade").value="";
-    document.getElementById("valor").value="";
-}
+    const entrega = {
+        endereco: endereco,
+        nota: nota,
+        observacao: observacao,
+        link_maps: linkMaps,
+        data_envio: new Date().toLocaleString()
+    };
 
-function atualizarLista(){
-    let listaItens = document.getElementById("listaItens");
-    listaItens.innerHTML="";
-    itens.forEach(item=>{
-        let total=item.quantidade*item.valor;
-        listaItens.innerHTML+=
-        `<li class="list-group-item d-flex justify-content-between">
-        ${item.quantidade}x ${item.produto}
-        <span>${total.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}</span>
-        </li>`;
-    });
-}
+    console.log("Entrega enviada:", entrega);
 
-function gerarCupom(){
-    let cliente = document.getElementById("cliente").value;
-    let contato = document.getElementById("contato").value;
-    let tipo = document.getElementById("tipoEntrega").value;
-    let taxa = parseFloat(document.getElementById("taxa").value) || 0;
-    let pagamento = document.getElementById("pagamento").value;
-
-    let subtotal=0, itensTexto="";
-    itens.forEach(item=>{
-        let total=item.quantidade*item.valor;
-        subtotal+=total;
-        itensTexto+=`${item.quantidade}x ${item.produto} - ${total.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}\n`;
-    });
-
-    let totalFinal=subtotal+taxa;
-    let agora = new Date().toLocaleString("pt-BR");
-
-    let enderecoTexto="", mapaLink="";
-    if(tipo==="entrega"){
-        let endereco = document.getElementById("endereco").value;
-        let complemento = document.getElementById("complemento").value;
-
-        enderecoTexto = `Entrega:\n${endereco}\n${complemento}\n`;
-
-        // 🔥 AGORA USA APENAS ENDEREÇO + COMPLEMENTO
-        mapaLink = "https://www.google.com/maps/search/?api=1&query=" +
-        encodeURIComponent(endereco + " " + complemento);
-    } else {
-        let loja = document.getElementById("lojaRetirada").value;
-        enderecoTexto=`Retirada na loja: ${loja}\n`;
-    }
-
-    let cupom = `
-*************** MIX22 ***************
-PEDIDO Nº ${contadorPedido}
-${agora}
---------------------------------
-Cliente: ${cliente}
-Contato: ${contato}
---------------------------------
-${enderecoTexto}
---------------------------------
-ITENS:
-${itensTexto}
---------------------------------
-Subtotal: ${subtotal.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}
-Taxa: ${taxa.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}
-TOTAL: ${totalFinal.toLocaleString("pt-BR",{style:"currency",currency:"BRL"})}
-Pagamento: ${pagamento}
---------------------------------
-OBRIGADO PELA PREFERÊNCIA!
-`;
-
-    document.getElementById("resultado").textContent=cupom;
-
-    return {cupom, mapaLink, tipo};
-}
-
-function enviarWhatsApp(numero, mensagem){
-    numero = numero.replace(/\D/g,'');
-    if(!numero.startsWith("55")) numero="55"+numero;
-    window.open("https://wa.me/"+numero+"?text="+encodeURIComponent(mensagem),"_blank");
-}
-
-function finalizarPedido(){
-    let dados = gerarCupom();
-    let mensagem = document.getElementById("resultado").textContent;
-
-    if(dados.tipo==="entrega"){
-        mensagem += "\n\n📍 LOCALIZAÇÃO:\n"+dados.mapaLink;
-    }
-
-    let telefoneCliente = document.getElementById("contato").value;
-    if(telefoneCliente) enviarWhatsApp(telefoneCliente, mensagem);
-
-    contadorPedido++;
-    localStorage.setItem("contadorPedido", contadorPedido);
-    document.getElementById("numeroPedido").innerText = contadorPedido;
-
-    itens=[];
-    atualizarLista();
-}
-
-function enviarParaEntregador(){
-    let dados = gerarCupom();
-    let mensagem = document.getElementById("resultado").textContent;
-
-    if(dados.tipo==="entrega"){
-        let endereco = document.getElementById("endereco").value;
-        if(!endereco){
-            alert("Digite o endereço antes de enviar!");
-            return;
-        }
-        mensagem += "\n\n📍 LOCALIZAÇÃO NO MAPA:\n"+dados.mapaLink;
-    }
-
-    enviarWhatsApp(entregador.telefone, mensagem);
-}
-
-function imprimir(){
-    gerarCupom();
-    setTimeout(()=>{ window.print(); },500);
+    const resultado = document.getElementById("resultado");
+    resultado.style.display = "block";
+    resultado.innerHTML = `
+        <strong>Entrega registrada com sucesso!</strong><br><br>
+        <b>Data:</b> ${entrega.data_envio}<br>
+        <b>Endereço:</b> ${entrega.endereco}<br>
+        <b>Nota:</b> ${entrega.nota}<br>
+        <b>Observação:</b> ${entrega.observacao || "Nenhuma"}<br><br>
+        <b>Link do Maps:</b><br>
+        <a href="${entrega.link_maps}" target="_blank">
+            Abrir localização
+        </a>
+    `;
 }
 </script>
 
 </body>
 </html>
+
